--- a/documents.html
+++ b/documents.html
@@ -18,9 +18,11 @@
 
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/media.css">
+	<link rel="stylesheet" href="libs/select2/select2.min.css">
 
 	<script src="libs/jquery/jquery-3.6.0.min.js" defer></script>
 	<script src="libs/input-mask/jquery.maskedinput.min.js" defer></script>
+	<script src="libs/select2/select2.min.js" defer></script>
 
 	<script src="js/common.js" defer></script>
 
@@ -108,11 +110,11 @@
 									</div>
 									<nav class="menu_toggle_dropdown">
 										<ul>
-											<li><a href="#">Профиль</a></li>
-											<li><a href="#">Заявки</a></li>
-											<li><a href="#">История заказов</a></li>
-											<li><a href="#">Документы</a></li>
-											<li><a href="#">Выйти</a></li>
+											<li><a href="/profile.html">Профиль</a></li>
+											<li><a href="/applications.html">Заявки</a></li>
+											<li><a href="/history.html">История заказов</a></li>
+											<li><a href="/documents.html">Документы</a></li>
+											<li><a href="/index.html">Выйти</a></li>
 										</ul>
 									</nav>
 								</div>
@@ -170,12 +172,12 @@
 							</div>
 							<div class="verification_enabled mt-3 mb-4">
 								<div class="small center mb-3">Верификация пройдена <br> можете оформить первую заявку</div>
-								<a href="#" class="btn btn-accent btn-large">Оформить заявку</a>
+								<a href="#" class="btn btn-accent btn-large to-application">Оформить заявку</a>
 							</div>
 							<nav>
 								<ul>
 									<li>
-										<a href="#">
+										<a href="/profile.html">
 											<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<g clip-path="url(#clip0_1603_4806)">
 													<path
@@ -192,7 +194,7 @@
 										</a>
 									</li>
 									<li>
-										<a href="#">
+										<a href="/applications.html">
 											<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<g clip-path="url(#clip0_1603_4812)">
 													<path
@@ -212,7 +214,7 @@
 										</a>
 									</li>
 									<li>
-										<a href="#">
+										<a href="/history.html">
 											<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<g clip-path="url(#clip0_1603_4818)">
 													<path
@@ -232,7 +234,7 @@
 										</a>
 									</li>
 									<li class="current">
-										<a href="#">
+										<a href="/documents.html">
 											<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<g clip-path="url(#clip0_1603_4825)">
 													<path
@@ -255,7 +257,7 @@
 										</a>
 									</li>
 									<li>
-										<a href="#">
+										<a href="/profile.html">
 											<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<g clip-path="url(#clip0_1603_4832)">
 													<path
@@ -275,7 +277,7 @@
 										</a>
 									</li>
 									<li>
-										<a href="#">
+										<a href="/index.html">
 											<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<g clip-path="url(#clip0_1603_4838)">
 													<path
@@ -867,7 +869,119 @@
 				</div>
 			</div>
 		</div>
-
+		<div class="popup for-profile">
+			<div class="popup-dialog">
+				<div class="popup-wrap">
+					<div class="btn-close close">
+						<img src="images/cancel.svg">
+					</div>
+					<div class="two mb-4">Оформление заявки</div>
+					<form action="">
+						<div class="form-group">
+							<label for="product_send">Выберите продукцию</label>
+							<select name="" id="product_send" class="js-select-single">
+								<option value="Селитра аммиачная марки Б - АО “Аммоний”">Селитра аммиачная марки Б - АО “Аммоний”</option>
+								<option value="Селитра аммиачная марки Б - АО “Аммоний”">Селитра аммиачная марки С - АО “Аммоний”</option>
+							</select>
+						</div>
+						<div class="form-group form-group-row d-flex align-items-center">
+							<div class="form-group">
+								<label for="">Объем, Т</label>
+								<div class="count_block">
+									<div class="minus">-</div>
+									<input type="number" value="100" min="10" max="1000" step="100">
+									<div class="plus">+</div>
+								</div>
+							</div>
+							<div class="form-group">
+								<label for="product_send">Поставщик</label>
+								<select name="" id="product_company" class="js-select-single">
+									<option value="Селитра аммиачная марки Б - АО “Аммоний”">ООО «Аммоний-Агро»</option>
+								</select>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="">Предпочтительные варианты упаковки</label>
+							<div class="checkbox_wrap">
+								<label class="checkbox">
+									<input type="checkbox" checked="" name="policy_check" id="policy_check" wfd-id="id12">
+									<span>МКР</span>
+									<span class="checkmark"></span>
+								</label>
+							</div>
+							<div class="checkbox_wrap">
+								<label class="checkbox">
+									<input type="checkbox" checked="" name="policy_check" id="policy_check" wfd-id="id12">
+									<span>Мешки 50 кг</span>
+									<span class="checkmark"></span>
+								</label>
+							</div>
+						</div>
+						<hr>
+						<div class="four mb-3 mt-4 text-normal">Способы доставки</div>
+						<div class="form-group select-group d-flex">
+							<select name="" id="" class="js-select-single">
+								<option value="">ЖД транспорт</option>
+							</select>
+							<select name="" id="" class="js-select-single">
+								<option value="">Авиатранспорт</option>
+							</select>
+						</div>
+						<div class="link_accent mt-3 mb-4">Добавить пункт выгрузки</div>
+						<hr>
+						<div class="four mb-3 mt-4 text-normal">Срок поставки</div>
+						<div>
+							<input type="hidden" name="company_type" value="Юридическое лицо">
+								<div class="d-flex justify-content-between">
+									<div class="choice_button choice_accent active">
+										<label for="company_choice1">До фиксированной даты</label>
+										<input type="radio" checked  name="company_item" value="Юридическое лицо" id="company_choice1">
+									</div>
+									<div class="choice_button choice_accent ">
+										<label for="company_choice2" name="company">Период поставки </label>
+										<input type="radio"   name="company_item" value="Индивидуальный предприниматель" id="company_choice2">
+									</div>
+								</div>
+						</div>
+						<div class="form-group mt-2">
+							<input type="date" name="" id="">
+						</div>
+						<div class="d-flex justify-content-end mt-4">
+							<div class="btn btn-accent to-application-send">Отправить заявку</div>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+		<div class="popup for-application">
+			<div class="popup-dialog">
+				<div class="popup-wrap">
+					<div class="btn-close close">
+						<img src="images/cancel.svg">
+					</div>
+					<div class="three mb-3">Ваша заявка №123123 успешно создана</div>
+					<p>Наш менеджер свяжется с вами в ближайшее время. Отслеживайте статус заявки в личном кабинете.</p>
+					<div class="application_total_list">
+						<div class="application_total_list_item d-flex align-items-center">
+							<img src="images/image.jpg" loading="lazy">
+							<div>
+								<div class="three text-normal mb-2">Селитра аммиачная марки Б, высший сорт ГОСТ 2-2013</div>
+								<div class="d-flex align-items-center">
+									<div>
+										<div class="less light">Вы выбрали</div>
+										<div>1 000 T</div>
+									</div>
+									<div class="ml-2">
+										<div class="less light">Поставщик</div>
+										<div>ООО "Аммоний-Агро"</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 
 </body>
