--- a/documents.html
+++ b/documents.html
@@ -496,7 +496,7 @@
 							</div>
 							<div class="documents_widget" data-docs="Счета">
 								<div class="d-flex align-items-center mb-3 btn-group-lg mb-4">
-									<a href="#" class="btn">Скачать шаблон договора</a>
+									<a href="#" class="btn">Скачать шаблон счета</a>
 									<label for="input_docs" class="btn">Загрузить документ</label>
 									<input type="file" class="d-none" id="input_docs">
 								</div>
